mermas por categoria

--- a/templates/form/damagerefrigecpg.html
+++ b/templates/form/damagerefrigecpg.html
@@ -46,7 +46,7 @@
            
                 
         </script>
-    <title>Damage</title>
+    <title>Merma R&F</title>
 </head>
 <body>
     {% with messages = get_flashed_messages() %}
@@ -62,7 +62,7 @@
     {% block body%}
     <div class="container-formscan">
         <section class="form-register">
-            <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarDamage">
+            <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarDamage/{{type}}/PZ">
                 <h2 class="titulo2"> Escanea un ean</h2>
                     <label for="cantidad"> Cantidad:
                         <input name="cantidad" id="quantity" type="number"  value="1"  required>
