--- a/templates/mermas.html
+++ b/templates/mermas.html
@@ -39,45 +39,25 @@
                 </div>
     </div>
         <div class="container_form">
-            <!-- <div class="mudulos">
-                <a href='/Packing' class='Proces_link'>
-                    <i class="fa-solid fa-boxes-packing"></i>
-                 Packing</a>
-            </div> -->
-            <!-- <div class="mudulos">
-                <a href='/Picking' class='Proces_link'>
-                <i class="fa-solid fa-dolly"></i>
-                 Picking</a>
-            </div> -->
             <div class="mudulos">
-                <a href='/mermas' class='Proces_link'>
-                <i class="fa-solid fa-circle-exclamation"></i>
-                 Mermas</a>
+                <a href='/Damage/cpg' class='Proces_link'>
+                <i class="fa-solid fa-basket-shopping"></i>
+                 CPG</a>
             </div>
             <div class="mudulos">
-                <a href='/Product' class='Proces_link'>
-                    <i class="fa-solid fa-pen-to-square"></i>
-                 Registro de Productos</a>
+                <a href='/Damage/fruver' class='Proces_link'>
+                    <i class="fa-solid fa-apple-whole"></i>
+                F&V</a>
             </div>
             <div class="mudulos">
-                <a href='/Inventory' class='Proces_link'>
-                    <i class="fa-solid fa-boxes-stacked"></i>
-                 Inventario</a>
+                <a href='/Damage/Refrigerados' class='Proces_link'>
+                    <i class="fa-solid fa-ice-cream"></i>
+                R&F</a>
             </div>
             <div class="mudulos">
-                <a href='/Receiving' class='Proces_link'>
-                <i class="fa-solid fa-truck-ramp-box"></i>
-                 Recepción</a>
-            </div>
-            <div class="mudulos">
-                <a href='/RegistrarReceivingP/Faltantes' class='Proces_link'>
-                    <i class="fa-solid fa-clock"></i>
-                Faltantes</a>
-            </div>
-            <div class="mudulos">
-                <a href='/RegistrarReceivingP/Devolución' class='Proces_link'>
-                    <i class="fa-solid fa-road-circle-exclamation"></i>
-                    Devolución</a>
+                <a href='/Damage/eggs' class='Proces_link'>
+                    <i class="fa-solid fa-egg"></i>
+                EGGS</a>
             </div>
         </div>
 {% endblock %}
