--- a/templates/nav.html
+++ b/templates/nav.html
@@ -23,6 +23,7 @@
         <div class="panel">
                     <a href='/Reporte_receiving/0' class='link_menu'>  Movimientos </a>
                     <a href='/ReporteInventori/0' class='link_menu'>  Inventarios</a>
+                    <a href='/ReporteMermas/0' class='link_menu'>  Mermas</a>   
                     <a href='/ReporteProducts/0' class='link_menu'>  Products</a>      
         </div>
         
