--- a/templates/form/damagefruver.html
+++ b/templates/form/damagefruver.html
@@ -34,8 +34,8 @@
         <section class="form-register">
             <form id="contact-form" name="contact-form" class="contact-form" method="post" action="/RegistrarDamage/{{type}}/KG">
                 <h2 class="titulo2"> Escanea un ean</h2>
-                    <label for="cantidad"> Cantidad:
-                        <input name="cantidad" id="quantity" type="number"  value="1"  required>
+                    <label for="cantidad"> Cantidad en KG:
+                        <input name="cantidad" id="quantity" type="number"  value="1"  required><span>Kg</span>
                     </label>
                     <label for="Motivo">Motivo:</label>
                     <select name="Motivo" >
